--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_native_splash: ^2.3.10
   flutter_animate: ^4.5.0
   responsive_builder: ^0.7.0
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
