--- a/splash.yaml
+++ b/splash.yaml
@@ -12,4 +12,4 @@ flutter_native_splash:
     icon_background_color: "#FFFFFF"
     icon_background_color_dark: "#272727"
 
-  web: false
+  web: true
