--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,12 +19,19 @@ dependencies:
   flutter_animate: ^4.5.0
   responsive_builder: ^0.7.0
   google_fonts: ^6.1.0
+  get_it: ^7.6.7
+  injectable: 2.3.2
+  stop_watch_timer: ^3.1.0+4
+  flutter_analog_clock: ^1.0.3
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.8
+  injectable_generator: 2.4.1
 
 flutter:
   uses-material-design: true
